# webcloner

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: llm_service.py  main.py  scraper.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
